specs/016-generics/examples/invalid/type-arg-count.ts
function identity<T>(x: T): T {
  return x;
}

console.log(identity<int, string>(5));
